--- a/sport.css
+++ b/sport.css
@@ -4,19 +4,19 @@
     height: 3%;
     float: left;
 }
-body {
-    font-family: Arial, Helvetica, sans-serif;
-  }
+
   
   .navbar {
     overflow: hidden;
     background-color: #333;
+    top: 0;
   }
   
   .navbar a {
     float: left;
     margin-top: 0.4%;
     font-size: 16px;
+    top: 0;
     color: white;
     text-align: center;
     padding: 14px 16px;
@@ -26,8 +26,76 @@ body {
   
   
   
-  .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: rgb(59, 59, 59);
+  .navbar a:hover {
+    background-color: rgb(87, 86, 86);
   }
   
+  /*code for images*/
+
+  * {
+    box-sizing: border-box;
+  }
   
+  body {
+    background-color: #f1f1f1;
+    padding: 20px;
+    font-family: Arial;
+  }
+  
+  /* Center website */
+  .main {
+    max-width: 1000px;
+    margin: auto;
+  }
+  
+  h1 {
+    font-size: 50px;
+    word-break: break-all;
+  }
+  
+  .row {
+    margin: 8px -16px;
+  }
+  
+  /* Add padding BETWEEN each column */
+  .row,
+  .row > .column {
+    padding: 8px;
+  }
+  
+  /* Create four equal columns that floats next to each other */
+  .column {
+    float: left;
+    width: 25%;
+  }
+  
+  /* Clear floats after rows */ 
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Content */
+  .content {
+    background-color: white;
+    padding: 10px;
+     width: 100%;
+  }
+  
+  /* Responsive layout - makes a two column-layout instead of four columns */
+  @media screen and (max-width: 900px) {
+    .column {
+      width: 50%;
+    }
+  }
+  
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+    .column {
+      width: 100%;
+    }
+  }
+  #gridimage{
+    width: 100%;
+  }
