--- a/sport.css
+++ b/sport.css
@@ -8,7 +8,7 @@
   
   .navbar {
     overflow: hidden;
-    background-color: #333;
+    background-color: rgb(75, 75, 75);
     
     
     
@@ -43,6 +43,10 @@
     background-color: #f1f1f1;
     padding: 20px;
     font-family: Arial;
+  }
+  .home{
+    max-width: max-content;
+    margin: auto;
   }
   
   /* Center website */
