--- a/home.css
+++ b/home.css
@@ -1,4 +1,3 @@
-
 #logo{
     width: 3%;
     height: 3%;
@@ -30,7 +29,7 @@
   
   
   .navbar a:hover {
-    background-color: rgb(87, 86, 86);
+    background-color: rgb(36, 24, 24);
   }
   
   /*code for images*/
@@ -48,11 +47,17 @@
     max-width: max-content;
     margin: auto;
   }
-  
+  .title{
+    max-width: max-content;
+    margin: auto
+  }
+  #grid {
+    font: small-caps;
+  }
   
   /* Center website */
   .main {
-    max-width: 1000px;
+    max-width: 1500px;
     margin: auto;
   }
   
@@ -74,7 +79,7 @@
   /* Create four equal columns that floats next to each other */
   .column {
     float: left;
-    width: 25%;
+    width: 33.333333%;
   }
   
   /* Clear floats after rows */ 
