--- a/home.css
+++ b/home.css
@@ -39,7 +39,7 @@
   }
   
   body {
-    background-color: #f1f1f1;
+    background-color: #ffffff;
     padding: 0px;
     font-family: Arial;
     margin: 0;
