--- a/sport.css
+++ b/sport.css
@@ -26,7 +26,9 @@
 
   }
   
-  
+  p {
+  font-size: smaller;
+  }
   
   
   .navbar a:hover {
@@ -41,8 +43,9 @@
   
   body {
     background-color: #f1f1f1;
-    padding: 20px;
+    padding: 0px;
     font-family: Arial;
+    margin: 0;
   }
   .home{
     max-width: max-content;
